23.apr (ws)
      - fix #3459: Beaming of sixteenth and eight note sequences in 4/4
      - fix #10365: Whole rests corrupt measure on re-loading scores with time
        longer than 4/4 (patch from Miwarre)
      - fix #10366: Oddity and possible crash with score excerpts
22.apr (ws)
      - multi measure rest layout fixes
      - note hooks are not draggable anymore
21.apr (ws)
      - fix #9877: Corruption with tied note in multi-voice
20.apr (ws)
      - added new style parameter: lyrics line height
      - fix placement of rests on one line staff
      - add keyboard shortcut to drum palette entries
      - fix #7883: Double click on drum palette causes crash
      - fix: Some issues with time sigs (patch from Miwarre)
19.apr (ws)
      - delay update of bsp tree
      - fix #10310: Dot of dotted note cannot be made invisible
      - fixes for pre 2.0 score compatibility
18.apr (ws)
      - enable 128th note entry
      - fix #10261: playback cursor does not follow repeat
      - fix #10282: Undo Beam Properties change causes crash
16.apr (ws)
      - fix #10264: Select a flag and enter a note causes crash
      - dont save omr information in *.mscx file type
15.apr (ws)
      - replace obsolete QDirModel with QFileSstemModel
      - switch off unused synthesizers (reducing cpu load)
      - enable edit mode for time signatures ("nudging")
14.apr (ws)
      - fix #10241: Inserted barline is missing
      - fix #10048: Opening Page Settings causes crash
      - fix #10247: Closing score after playback causes crash
      - fix #10244: EditTextStyles dlg does not keep "Size follows space unit"
        setting (patch from Miwarre)
      - fix #10245: Right-click Text Properties dlg box does not keep "Size follows
        space unit" setting (patch from Miwarre)
13.apr (ws)
      - fix crash when creating new score from template
      - new section break property: "start new section with long instrument names"